--- a/analysis/assets/style.css
+++ b/analysis/assets/style.css
@@ -1,22 +1,104 @@
 body {
-    background-color: #708090;
+    background-color: #ffffff;
 }
 
 .dashboard-container {
-    width: 1400px;
-    height: 800px;
+    width: 2000px;
+    height: 1000px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
     margin-bottom: 50px;
-    background-color: #010103;
-    border: 1px solid #cccccc;
-    border-radius: 10px;
+    display: 'flex';
+    justify-content: 'center';
+    align-items: 'center';
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333333;
+    font-size: 35px;
+    margin: 15px;
+}
+
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333333;
+    font-size: 25px;
+    margin: 10px;
 }
 
 p {
-    font-family: 'Poppins';
-    color: #ffffff;
-    margin-left: 30px;
-    margin-top: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333333;
+    font-size: 16px;
+    margin: 15px;
+    text-align: justify;
+}
+
+label {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333333;
+    font-size: 16px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+}
+
+/* Dropdowns */
+
+
+.customDropdown {
+    font-size: 16px;
+    font-family: "Poppins";
+    padding-left: 1px;
+    margin-bottom: 10px;
+}
+
+.customDropdown .Select-control {
+    width: 100%;
+    height: 38px;
+    background-color: transparent;
+    border: 1px solid #676768;
+    border-radius: 3px;
+    color: var(--bs-info) !important;
+}
+
+.customDropdown .Select-value-label,
+.customDropdown .Select-placeholder {
+    color: var(--bs-info) !important;
+}
+
+.customDropdown .Select-arrow {
+    border-color: #cccccc transparent transparent;
+}
+
+.customDropdown.is-open .Select-arrow {
+    border-color: transparent transparent #cccccc;
+}
+
+.customDropdown .Select-clear {
+    color: var(--bs-info);
+    font-size: 22px;
+}
+
+.customDropdown.is-focused:not(.is-open)>.Select-control {
+    border: 2px solid color-mix(in srgb, var(--bs-info), #010103 50%) !important;
+}
+
+.customDropdown.is-focused:not(.is-open) .Select-arrow {
+    border-color: var(--bs-info) transparent transparent;
+}
+
+.customDropdown .Select-menu-outer {
+    margin-top: 5px;
+    border-radius: 3px;
+    background-color: #010103;
+    border: 1px solid #676768;
+    color: var(--bs-light);
+}
+
+.customDropdown .VirtualizedSelectFocusedOption {
+    background-color: color-mix(in srgb, var(--bs-light), #010103 7%);
+    border-radius: 3px;
+    color: #010103;
 }
